--- a/src/components/Counter/Counter.module.scss
+++ b/src/components/Counter/Counter.module.scss
@@ -4,9 +4,11 @@
   justify-content: center;
 }
 
-.row > button {
-  margin-left: 4px;
-  margin-right: 8px;
+.row {
+  & > button {
+    margin-left: 4px;
+    margin-right: 8px;
+  }
 }
 
 .row:not(:last-child) {
@@ -73,7 +75,7 @@
 }
 
 .asyncButton:active:after {
-  width: 0%;
+  width: 0;
   opacity: 1;
   transition: 0s;
 }
