--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,28 +1,10 @@
-.App {
-  text-align: center;
+.root {
+  height: 100%;
+  overflow: hidden;
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.content {
+  padding: 20px;
+  overflow: auto;
+  height: calc(100% - 104px);
 }
