--- a/src/routes/Main/Main.module.scss
+++ b/src/routes/Main/Main.module.scss
@@ -1,28 +1,12 @@
-.App {
-  text-align: center;
+.root {
+  margin: 0 5rem;
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.assets {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 20rem);
+  //grid-template-rows: repeat(auto-fill, 350px);
+  grid-auto-flow: row;
+  grid-gap: 1rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
 }
