--- a/src/components/AssetCard/AssetCard.module.scss
+++ b/src/components/AssetCard/AssetCard.module.scss
@@ -23,13 +23,24 @@
   font-size: 1rem;
 }
 
-.edit {
+.actions {
   position: absolute;
   top: 0.25rem;
   right: 0.25rem;
-  background-color: #f5f5f5;
 
-  &:hover {
-    background-color: #e0e0e0;
+  & > button {
+    background-color: #f5f5f5;
+
+    &:hover {
+      background-color: #e0e0e0;
+    }
+
+    &:not(:last-child) {
+      margin-right: 0.5rem;
+    }
   }
+}
+
+.dialog {
+  width: 20rem;
 }
