--- a/src/routes/Main/Main.module.scss
+++ b/src/routes/Main/Main.module.scss
@@ -1,5 +1,5 @@
 .root {
-  margin: 0 5rem;
+  margin: 0 5rem 0 14rem;
 }
 
 .assets {
@@ -14,4 +14,16 @@
 .addbtn {
   position: fixed;
   right: 2rem;
+}
+
+.filters {
+  position: fixed;
+  left: 2rem;
+  width: 12rem;
+
+  & > div {
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
 }
